attempt fix travis build failures